# shkoliner

./: .travis.yml  README.md  shkoliner.cabal
app/: Dump.hs  Main.hs
src/: Lib.hs  Types.hs
static/: dummy.json  kde.css  kde.html  kde.js
