name:                shkoliner
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/DNNX/shkoliner
license:             BSD3
license-file:        LICENSE
author:              Viktar Basharymau
maintainer:          example@example.com
copyright:           2015 Viktar Basharymau
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , wreq
                     , lens
                     , bytestring
                     , http-client
                     , scalpel
  default-language:    Haskell2010

executable shkoliner-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , shkoliner
  default-language:    Haskell2010

test-suite shkoliner-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , shkoliner
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/DNNX/shkoliner
